<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2014 Google Inc. All rights reserved.
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SurfaceShuffleActivity" >

    <Button
        android:id="@+id/play_stop_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/play_button_text"
        android:onClick="clickPlayStop"
        />

    <Button
        android:id="@+id/shuffle_surface_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/play_stop_button"
        android:text="@string/shuffle_surface"
        android:onClick="clickShuffleSurface"
        />

    <Spinner
        android:id="@+id/playMovieFile_spinner"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_below="@id/play_stop_button"
        />

    <LinearLayout
        android:id="@+id/surface_row1"
        android:layout_below="@id/playMovieFile_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SurfaceView
            android:id="@+id/playMovie_surface"
            android:layout_width="100sp"
            android:layout_height="100sp" />
        <SurfaceView
            android:id="@+id/playMovie_surface2"
            android:layout_width="100sp"
            android:layout_height="100sp" />

        <SurfaceView
            android:id="@+id/playMovie_surface3"
            android:layout_width="100sp"
            android:layout_height="100sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/surface_row2"
        android:layout_below="@id/surface_row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SurfaceView
            android:id="@+id/playMovie_surface4"
            android:layout_width="100sp"
            android:layout_height="100sp" />
        <SurfaceView
            android:id="@+id/playMovie_surface5"
            android:layout_width="100sp"
            android:layout_height="100sp" />
        <SurfaceView
            android:id="@+id/playMovie_surface6"
            android:layout_width="100sp"
            android:layout_height="100sp" />
    </LinearLayout>

</RelativeLayout>